# Ignition

./: .gitignore  Cargo.toml  Makefile.toml  README.md  asset-manifest.json  config.json  index.html
.github/workflows/: test.yml
adapters-interface/: Cargo.toml
adapters-interface/src/: lib.rs
blueprints/adapters/: Cargo.toml
blueprints/adapters-interface/: Cargo.toml
blueprints/adapters-interface/src/: lib.rs  macros.rs  oracle.rs  pool.rs
blueprints/adapters/src/: lib.rs  macros.rs  oracle.rs
blueprints/caviarnine-adapter/: Cargo.toml
blueprints/caviarnine-adapter/src/: bin_selector.rs  lib.rs
blueprints/ignition/: Cargo.toml
blueprints/ignition/src/: lib.rs
blueprints/ignition/src/types/: liquidity_position.rs  lockup_period.rs  mod.rs
blueprints/ociswap-adapter/: Cargo.toml
blueprints/ociswap-adapter/src/: lib.rs
blueprints/olympus/: Cargo.toml
blueprints/olympus/src/: lib.rs
blueprints/olympus/src/types/: liquidity_position.rs  mod.rs  percent.rs
blueprints/test-oracle/: Cargo.toml
blueprints/test-oracle/src/: lib.rs
blueprints/unit-tests/: Cargo.toml  build.rs
blueprints/unit-tests/assets/: caviarnine  defiplaza  ociswap
blueprints/unit-tests/tests/: auth.rs  environments.rs  package_loader.rs  protocol.rs
blueprints/unit-tests/tests/bindings/: macros.rs  mod.rs  ociswap.rs
blueprints/unit-tests/tests/utils/: environments.rs  errors.rs  mod.rs  types.rs
diagrams/: .$architecture.drawio.dtmp  .$caviarnine.drawio.bkp  architecture.drawio  caviarnine.drawio
frontend/: package-lock.json  package.json
frontend/public/: addresses.json  config.json  index.html
frontend/src/: App.js  App.tsx  BootstrapInformation.ts  RadixDappToolkit.ts  config.json  constants.ts  index.css
libraries/adapters-interface/: Cargo.toml
libraries/adapters-interface/src/: any_value.rs  common.rs  lib.rs  oracle.rs  pool.rs  prelude.rs
libraries/address-macros/: Cargo.toml
libraries/address-macros/src/: lib.rs
libraries/common/: Cargo.toml
libraries/common/src/: any_value.rs  indexed_buckets.rs  lib.rs  liquidity_receipt.rs  lockup_period.rs  prelude.rs  price.rs  volatility.rs
libraries/gateway-client/: Cargo.toml
libraries/package-loader/: Cargo.toml  build.rs
libraries/package-loader/src/: lib.rs
libraries/ports-interface/: Cargo.toml
libraries/ports-interface/src/: any_value.rs  lib.rs  oracle.rs  pool.rs  prelude.rs
libraries/scrypto-interface/: Cargo.toml  README.md
libraries/scrypto-interface-proc-macros/: Cargo.toml
libraries/scrypto-interface-proc-macros/src/: lib.rs
libraries/scrypto-interface/src/: decl_macros.rs  handlers.rs  lib.rs  types.rs
libraries/scrypto-math/: Cargo.toml
olympus/: Cargo.toml
scripts/: check.sh  test.sh
scrypto-interface/: Cargo.toml
static/css/: main.26915aa4.css  main.26915aa4.css.map
static/js/: 920.3294b616.chunk.js  920.3294b616.chunk.js.map  main.12ec0e44.js  main.12ec0e44.js.map  main.2250889e.js  main.2250889e.js.map  main.7df7724c.js  main.7df7724c.js.map  main.9543af74.js  main.9543af74.js.map  main.97903a7b.js  main.97903a7b.js.map  main.e3f6300c.js  main.e3f6300c.js.map
testing/stateful-tests/: Cargo.toml
testing/stateful-tests/src/: lib.rs
testing/stateful-tests/tests/: lib.rs
testing/tests/: Cargo.toml
testing/tests/assets/: ociswap_v2_pool.wasm
testing/tests/src/: environment.rs  errors.rs  extensions.rs  prelude.rs
testing/tests/tests/: caviarnine_v1.rs  caviarnine_v1_adapter_v1.rs  caviarnine_v1_adapter_v2.rs  caviarnine_v1_simulation.rs  defiplaza_v2.rs  ociswap_v1.rs  ociswap_v2.rs  protocol.rs
tests/: Cargo.toml  build.rs  example
tests/assets/: ociswap_v2.rpd  ociswap_v2.wasm  ociswap_v2_pool.rpd  ociswap_v2_pool.wasm  ociswap_v2_registry.wasm
tests/src/: environment.rs  errors.rs  extensions.rs  indexed_buckets.rs  lib.rs  prelude.rs
tests/tests/: caviarnine.rs  caviarnine_v1.rs  caviarnine_v1_simulation.rs  defiplaza_v2.rs  ociswap.rs  ociswap_v1.rs  ociswap_v2.rs  protocol.rs
tools/bootstrap/: Cargo.toml
tools/bootstrap/src/: cli.rs  error.rs  macros.rs  main.rs  mainnet_testing.rs  stokenet_production.rs  transaction_service.rs
tools/bootstrap/src/types/: mod.rs  name_indexed_dex_information.rs  name_indexed_resource_information.rs
tools/bootstrapper/: Cargo.toml
tools/bootstrapper/src/: cli.rs  constants.rs  error.rs  macros.rs  main.rs  utils.rs
tools/bootstrapper/src/gateway/: client.rs  mod.rs  types.rs
tools/bootstrapper/src/subcommands/: mod.rs  publish_test_to_stokenet.rs
tools/package-dumper/: Cargo.toml
tools/package-dumper/src/: main.rs
tools/publishing-tool/: Cargo.toml
tools/publishing-tool-2/: Cargo.toml
tools/publishing-tool-2/src/: database_overlay.rs  error.rs  lib.rs  macros.rs  utils.rs
tools/publishing-tool-2/src/cli/: bin.rs  publish.rs
tools/publishing-tool-2/src/configuration_selector/: mainnet_production.rs  mainnet_testing.rs  mod.rs
tools/publishing-tool-2/src/network_connection_provider/: gateway_connector.rs  mainnet_simulator_connector.rs  mod.rs  traits.rs
tools/publishing-tool-2/src/publishing/: configuration.rs  error.rs  handler.rs  macros.rs
tools/publishing-tool/src/: database_overlay.rs  error.rs  lib.rs  macros.rs  main.rs  utils.rs
tools/publishing-tool/src/cli/: bin.rs  mod.rs  publish.rs
tools/publishing-tool/src/cli/default_configurations/: mainnet_testing.rs  mod.rs  stokenet_testing.rs
tools/publishing-tool/src/configuration_selector/: mainnet_production.rs  mainnet_testing.rs  mod.rs  stokenet_testing.rs
tools/publishing-tool/src/executor/: execution_service.rs  gateway_executor.rs  mainnet_simulator_executor.rs  mod.rs  traits.rs
tools/publishing-tool/src/network_connection_provider/: execution_service.rs  gateway_connector.rs  mainnet_simulator_connector.rs  mod.rs  traits.rs
tools/publishing-tool/src/publishing/: configuration.rs  error.rs  handler.rs  macros.rs  mod.rs
unit-tests/: Cargo.toml
unit-tests/tests/: auth.rs  caviar_nine.rs  protocol.rs
unit-tests/tests/utils/: environment.rs  environments.rs  errors.rs  mod.rs
(+222 files in other folders)
