[workspace]
resolver = "2"
members = [
    # Packages
    "packages/ignition",
    "packages/simple-oracle",
    "packages/ociswap-v1-adapter-v1",
    "packages/ociswap-v2-adapter-v1",
    "packages/defiplaza-v2-adapter-v1",
    "packages/caviarnine-v1-adapter-v1",
    # Libraries
    "libraries/common",
    "libraries/package-loader",
    "libraries/gateway-client",
    "libraries/scrypto-interface",
    "libraries/ports-interface",
    "libraries/scrypto-math",
    # Tools
    "tools/bootstrap",
    "tools/publishing-tool",
    # Tests
    "tests"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "The implementation of project Ignition in Scrypto for the Radix Ledger"

[workspace.dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
utils = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
native-sdk = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
radix-engine-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
radix-engine-stores = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
radix-engine-derive = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
radix-engine-queries = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
radix-engine-store-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }

scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true

[workspace.lints.clippy]
arithmetic_side_effects = "warn"

[patch.'https://github.com/radixdlt/radixdlt-scrypto']
sbor = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
utils = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
scrypto = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
native-sdk = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
transaction = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
radix-engine = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
radix-engine-common = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
radix-engine-stores = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
radix-engine-derive = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
radix-engine-queries = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
radix-engine-interface = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
radix-engine-store-interface = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
scrypto-unit = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }
scrypto-test = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "feff02d54b6b7b348b6a9cc465971004a41a9b2f" }