[workspace]
resolver = "2"
members = [
    # Packages
    "packages/ignition",
    "packages/simple-oracle",
    "packages/ociswap-v1-adapter-v1",
    "packages/ociswap-v2-adapter-v1",
    "packages/defiplaza-v2-adapter-v1",
    "packages/caviarnine-v1-adapter-v1",
    "packages/caviarnine-v1-adapter-v2",
    # Libraries
    "libraries/common",
    "libraries/package-loader",
    "libraries/gateway-client",
    "libraries/scrypto-interface",
    "libraries/ports-interface",
    "libraries/scrypto-math",
    "libraries/address-macros",
    # Tools
    "tools/publishing-tool",
    "tools/publishing-tool-2",
    "tools/package-dumper",
    # Tests
    "testing/tests",
    "testing/stateful-tests"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "The implementation of project Ignition in Scrypto for the Radix Ledger"

[workspace.dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-rust = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
scrypto-compiler = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-native-sdk = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-engine-stores = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-common-derive = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-substate-store-impls = { git = "https://www.github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-substate-store-interface = { git = "https://www.github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-substate-store-queries = { git = "https://www.github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-blueprint-schema-init = { git = "https://www.github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }

state-manager = { git = "https://github.com/radixdlt/babylon-node", rev = "8fb0a8b886a7ab37bd4947a90be2a7e3511cd877" }

sbor-json = { git = "https://github.com/radixdlt/radix-engine-toolkit", rev = "429dd3de58c0860ddbb8a83e9b57e65a1c0765d1" }

regex = { version = "1.9.3" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true

[patch.'https://github.com/radixdlt/radixdlt-scrypto']
sbor = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-transactions = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-transaction-scenarios = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-common = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-engine-interface = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-engine = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-substate-store-impls = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-substate-store-interface = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-substate-store-queries = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-rust = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
scrypto-test = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-blueprint-schema-init = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }

[workspace.lints.clippy]
arithmetic_side_effects = "warn"