[package]
name = "tests"
version.workspace = true
edition.workspace = true
description.workspace = true
build = "build.rs"

[dependencies]
scrypto-test = { workspace = true }
radix-engine-common = { workspace = true }
radix-engine-interface = { workspace = true }

ignition = { path = "../packages/ignition", features = ["test"] }
simple-oracle = { path = "../packages/simple-oracle", features = ["test"] }
ociswap-adapter-v1 = { path = "../packages/ociswap-adapter-v1", features = ["test"] }
caviarnine-adapter-v1 = { path = "../packages/caviarnine-adapter-v1", features = ["test"] }

package-loader = { path ="../libraries/package-loader" }

paste = { version = "1.0.14" }

[build-dependencies]
flate2 = { version = "1.0.28" }
