[package]
name = "unit-tests"
version = { workspace = true }
edition = { workspace = true }
description = "Unit tests of the Ignition protocol and accompanying blueprints"
build = "build.rs"

[dev-dependencies]
sbor = { workspace = true }
scrypto = { workspace = true }
scrypto-test = { workspace = true }
scrypto-unit = { workspace = true }
radix-engine-common = { workspace = true }
radix-engine-stores = { workspace = true }
radix-engine-queries = { workspace = true }
radix-engine-interface = { workspace = true }
radix-engine-store-interface = { workspace = true }

# Pull in the various blueprints to get their testing stubs
ignition = { path = "../blueprints/ignition", features = ["test"] }
test-oracle = { path = "../blueprints/test-oracle", features = ["test"] }
ociswap-adapter = { path = "../blueprints/ociswap-adapter", features = ["test"] }
caviarnine-adapter = { path = "../blueprints/caviarnine-adapter", features = ["test"] }
adapters-interface = { path = "../libraries/adapters-interface" }

paste = { version = "1.0.14" }
lazy_static = { version = "1.4.0" }

[build-dependencies]
walkdir = { version = "2.3.3", optional = true }
cargo_toml = { version = "0.15.3", optional = true }
flate2 = { version = "1.0.28" }
scrypto = { workspace = true }
scrypto-unit = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["compile-blueprints-at-build-time"]
# If this feature is enabled, this crate will compile all of the blueprints 
# at compilation time and no additional time will be spent on compilation at
# runtime.
compile-blueprints-at-build-time = ["dep:walkdir", "dep:cargo_toml"]
