[package]
name = "adapters"
version = { workspace = true }
edition = { workspace = true }
description = "Defines the interface of the various adapters"

[dependencies]
sbor = { workspace = true }
scrypto = { workspace = true }
radix-engine-common = { workspace = true }

[features]
scrypto = []

[lib]
crate-type = ["cdylib", "lib"]
