[package]
name = "ociswap-adapter"
version = { workspace = true }
edition = { workspace = true }
description = "Defines the adapter for Ociswap"

[dependencies]
sbor = { workspace = true }
scrypto = { workspace = true }
radix-engine-interface = { workspace = true }

scrypto-interface = { path = "../scrypto-interface" }
adapters-interface = { path = "../adapters-interface" }

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
