[package]
name = "olympus"
version = { workspace = true }
edition = { workspace = true }
description = "Defines the interface of the various adapters"

[dependencies]
sbor = { workspace = true }
scrypto = { workspace = true }

adapters = { path = "../adapters", features = ["scrypto"] }

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
