[package]
name = "olympus"
version = { workspace = true }
edition = { workspace = true }
description = "Defines the interface of the various adapters-interface"

[dependencies]
sbor = { workspace = true }
scrypto = { workspace = true }
radix-engine-derive = { workspace = true }

adapters-interface = { path = "../adapters-interface", features = ["scrypto"] }

humantime = { version = "2.1.0" }

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
