[package]
name = "test-oracle"
version = { workspace = true }
edition = { workspace = true }
description = "A simple oracle used in tests."

[dependencies]
sbor = { workspace = true }
scrypto = { workspace = true }
radix-engine-derive = { workspace = true }

adapters-interface = { path = "../adapters-interface", features = ["scrypto"] }

humantime = { version = "2.1.0" }

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
