[package]
name = "test-oracle"
version = { workspace = true }
edition = { workspace = true }
description = "A simple oracle used in tests."

[dependencies]
sbor = { workspace = true }
scrypto = { workspace = true }
radix-engine-derive = { workspace = true }

scrypto-interface = { path = "../scrypto-interface" }
adapters-interface = { path = "../adapters-interface" }

humantime = { version = "2.1.0" }

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
