[package]
name = "unit-tests"
version = { workspace = true }
edition = { workspace = true }
description = "Unit tests of the Olympus protocol and accompanying blueprints"

[dev-dependencies]
scrypto-test = { workspace = true }
scrypto-unit = { workspace = true }
radix-engine-stores = { workspace = true }
radix-engine-interface = { workspace = true }
radix-engine-store-interface = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
