[package]
name = "adapters-interface"
version = { workspace = true }
edition = { workspace = true }
description = "Defines the interface of the various adapters-interface"

[dependencies]
sbor = { workspace = true }
scrypto = { workspace = true }
radix-engine-common = { workspace = true }
radix-engine-derive = { workspace = true }
radix-engine-interface = { workspace = true }

scrypto-interface = { path = "../scrypto-interface" }

[lib]
crate-type = ["cdylib", "lib"]
