[package]
name = "address-macros"
version.workspace = true
edition.workspace = true
description = "A crate for decoding addresses at compile-time."

[dependencies]
radix-engine-common = { workspace = true }
radix-engine-interface = { workspace = true }

proc-macro2 = { version = "1.0.76" }
syn = "2.0.52"
quote = "1.0.35"
paste = "1.0.14"

[lib]
doctest = false
proc-macro = true

[lints]
workspace = true
