[package]
name = "package-loader"
description = "The implementaton of a package builder and loader for efficient runtime package loading."
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
radix-engine-common = { workspace = true }
radix-engine-queries = { workspace = true }

lazy_static = { verison = "1.4.0", optional = true }
getrandom = { version = "0.2.12", features = ["js"] }

[build-dependencies]
walkdir = { version = "2.3.3", optional = true }
cargo_toml = { version = "0.18.0", optional = true }

scrypto-unit = { workspace = true, optional = true }
radix-engine-interface = { workspace = true, optional = true }

[features]
default = ["build-time-blueprints"]
build-time-blueprints = [
    "dep:lazy_static",
    "dep:walkdir",
    "dep:cargo_toml",
    "dep:radix-engine-interface",
    "dep:scrypto-unit",
]

[lib]
crate-type = ["cdylib", "lib"]
