[package]
name = "package-loader"
description = "The implementaton of a package builder and loader for efficient runtime package loading."
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
radix-common = { workspace = true }
scrypto-compiler = { workspace = true }
radix-substate-store-queries = { workspace = true }

getrandom = { version = "0.2.12", features = ["js"] }

[build-dependencies]
walkdir = { version = "2.3.3", optional = true }
wasm-opt = { version = "0.114.2", optional = true }
cargo_toml = { version = "0.18.0", optional = true }

radix-engine = { workspace = true, optional = true }
radix-common = { workspace = true, optional = true }
radix-engine-interface = { workspace = true, optional = true }

[features]
default = []
build-time-blueprints = [
    "dep:walkdir",
    "dep:cargo_toml",
    "dep:radix-engine",
    "dep:radix-common",
    "dep:radix-engine-interface",
    "dep:wasm-opt",
]

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true