[package]
name = "scrypto-interface-proc-macros"
version.workspace = true
edition.workspace = true
description = "A library that provides compile-time interface capabilities to Scrypto blueprints"

[dependencies]
proc-macro2 = { version = "1.0.74" }
quote = { version = "1.0.35" }
syn = { version = "2.0.46", features = ["full", "visit"] }

[lib]
proc-macro = true
