[package]
name = "scrypto-interface"
description = "A library that provides a set of macros for writing and using Scrypto interfaces"
version.workspace = true
edition.workspace = true

[dependencies]
proc-macro2 = { version = "1.0.76" }
quote = { version = "1.0.35" }
syn = { version = "2.0.48", features = ["extra-traits"] }

[lib]
proc-macro = true