[package]
name = "stateful-tests"
version.workspace = true
edition.workspace = true
description = "A crate that tests Ignition against the current mainnet state"

[dependencies]
sbor = { workspace = true }
transaction = { workspace = true }
scrypto-test = { workspace = true }
scrypto-unit = { workspace = true }
radix-engine = { workspace = true }
radix-engine-common = { workspace = true }
radix-engine-interface = { workspace = true }

state-manager = { workspace = true }

common = { path = "../../libraries/common" }
ignition = { path = "../../packages/ignition", features = ["test"] }
simple-oracle = { path = "../../packages/simple-oracle", features = ["test"] }
ports-interface = { path = "../../libraries/ports-interface" }
ociswap-v1-adapter-v1 = { path = "../../packages/ociswap-v1-adapter-v1", features = [
    "test",
    "manifest-builder-stubs"
] }
ociswap-v2-adapter-v1 = { path = "../../packages/ociswap-v2-adapter-v1", features = [
    "test",
    "manifest-builder-stubs"
] }
defiplaza-v2-adapter-v1 = { path = "../../packages/defiplaza-v2-adapter-v1", features = [
    "test",
    "manifest-builder-stubs"
] }
caviarnine-v1-adapter-v1 = { path = "../../packages/caviarnine-v1-adapter-v1", features = [
    "test",
    "manifest-builder-stubs"
] }

package-loader = { path = "../../libraries/package-loader" }
gateway-client = { path = "../../libraries/gateway-client" }
publishing-tool = { path = "../../tools/publishing-tool" }

paste = { version = "1.0.14" }
extend = { version = "1.2.0" }

macro_rules_attribute = { version = "0.2.0" }
lazy_static = "1.4.0"

[lints]
workspace = true
