[package]
name = "tests"
version.workspace = true
edition.workspace = true
description = "A crate with unit and integration tests for Ignition"
build = "build.rs"

[dependencies]
sbor = { workspace = true }
radix-transactions = { workspace = true }
scrypto-test = { workspace = true }

radix-engine = { workspace = true }
radix-common = { workspace = true }
radix-engine-interface = { workspace = true }

common = { path = "../../libraries/common" }
ignition = { path = "../../packages/ignition", features = ["test"] }
simple-oracle = { path = "../../packages/simple-oracle", features = ["test"] }
ports-interface = { path = "../../libraries/ports-interface" }
ociswap-v1-adapter-v1 = { path = "../../packages/ociswap-v1-adapter-v1", features = [
    "test",
    "manifest-builder-stubs"
] }
ociswap-v2-adapter-v1 = { path = "../../packages/ociswap-v2-adapter-v1", features = [
    "test",
    "manifest-builder-stubs"
] }
defiplaza-v2-adapter-v1 = { path = "../../packages/defiplaza-v2-adapter-v1", features = [
    "test",
    "manifest-builder-stubs"
] }
caviarnine-v1-adapter-v2 = { path = "../../packages/caviarnine-v1-adapter-v2", features = [
    "test",
    "manifest-builder-stubs"
] }

package-loader = { path = "../../libraries/package-loader" }
gateway-client = { path = "../../libraries/gateway-client" }

paste = { version = "1.0.14" }
extend = { version = "1.2.0" }
lazy_static = "1.4.0"

[build-dependencies]
flate2 = { version = "1.0.28" }

[lints]
workspace = true