[package]
name = "bootstrap"
description = "A tool used to bootstrap project Ignition on various networks."
version.workspace = true
edition.workspace = true

[dependencies]
sbor = { workspace = true }
transaction = { workspace = true }
radix-engine = { workspace = true }
radix-engine-interface = { workspace = true }

common = { path = "../../libraries/common" }
ignition = { path = "../../packages/ignition" }
gateway-client = { path = "../../libraries/gateway-client" }
package-loader = { path = "../../libraries/package-loader", features = [
    "build-time-blueprints",
] }
ociswap-v1-adapter-v1 = { path = "../../packages/ociswap-v1-adapter-v1", features = [
    "manifest-builder-stubs",
] }
caviarnine-v1-adapter-v1 = { path = "../../packages/caviarnine-v1-adapter-v1", features = [
    "manifest-builder-stubs",
] }

serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.112" }

hex = { version = "0.4.3", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
rand = { version = "0.8.5" }

[lints]
workspace = true